set up the working basic layout of top collection cards, too much trouble it was. Instead of using fixed widths, I gave display: flex to the small card component, and gave display flex and flex-wrap: wrap to the parent container

--- a/nft_marketplace/src/components/Top-collection-cards/TopCollection.css
+++ b/nft_marketplace/src/components/Top-collection-cards/TopCollection.css
@@ -4,3 +4,48 @@
     object-fit: cover;
     border-radius: 50%;
 }
+
+.collection__data {
+    /* display: grid;
+    grid-template-columns: 10% 10% 80%;
+    column-gap: 1.5rem;
+    align-items: center;
+    border: 0 0 1px var(--color-text-light); */
+    display: flex;
+    /* justify-content: space-between; */
+    gap: 1rem;
+    align-items: center;
+}
+
+/* .data :nth-child(n) {
+    display: flex;
+    justify-content: space-between;
+    gap: 1rem;
+    align-items: center;
+} */
+
+.upper {
+    display: flex;
+    justify-content: space-between;
+    gap: 4rem;
+    align-items: flex-end;
+}
+.lower {
+    display: flex;
+    justify-content: space-between;
+    gap: 4rem;
+    align-items: center;
+}
+
+.floor__price__data {
+    display: flex;
+    align-items: center;
+}
+.result__data {
+    display: flex;
+    align-items: center;
+}
+
+@media screen and (max-width: 1024px) {
+
+}
